[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1.0", features = ["serde", "v4"]}
derive_more = "2.0"
rand = "0.10"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
handlebars = { version = "6", features = ["dir_source"]}
rocket = { version = "0.5.0-rc.1", features = ["json"]}
structopt = "0.3"
dotenv = "0.15"
tokio = "1.8.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
base64 = "0.23"
reqwest = { version = "0.13", features = ["blocking", "json", "cookies"] }
strum = { version = "0.28", features = ["derive"] }